--- a/slcore/database/fixparameters/qemu.mmio.yaml
+++ b/slcore/database/fixparameters/qemu.mmio.yaml
@@ -94,3 +94,40 @@ ralink,mt7620a-sysc:
                 - {offset: 0x0, size: 0x4, value: 0x3637544d, path: arch/mips/ralink/rt7620.c, function: prom_soc_init}
                 - {offset: 0x4, size: 0x4, value: 0x20203832, path: arch/mips/ralink/rt7620.c ,function: prom_soc_init}
                 - {offset: 0x8, size: 0x4, value: 0x00100000, path: arch/mips/ralink/rt7620.c ,function: prom_soc_init}
+ralink,rt3050-sysc:
+    regs_index:
+        0:
+            registers:
+                # void *sysc = (void *) ((((int)(int)(0x10000000)) & 0x1fffffff) | 0xa0000000); 
+                # n0 = __raw_readl(sysc + 0x00);
+                # n1 = __raw_readl(sysc + 0x04);
+                #
+                # if (n0 == 0x30335452 && n1 == 0x20203235) {
+                #     unsigned long icache_sets;
+                #     icache_sets = (read_c0_config1() >> 22) & 7;
+                #     if (icache_sets == 1) {
+                #         ralink_soc = RT305X_SOC_RT3050;
+                #         name = "RT3050";
+                #         soc_info->compatible = "ralink,rt3050-soc";
+                #     } else {
+                #         ralink_soc = RT305X_SOC_RT3052;
+                #         name = "RT3052";
+                #         soc_info->compatible = "ralink,rt3052-soc";
+                #     }
+                # } else if (n0 == 0x33335452 && n1 == 0x20203035) {
+                #     ralink_soc = RT305X_SOC_RT3350;
+                #     name = "RT3350";
+                #     soc_info->compatible = "ralink,rt3350-soc";
+                # } else if (n0 == 0x33335452 && n1 == 0x20203235) {
+                #     ralink_soc = RT305X_SOC_RT3352;
+                #     name = "RT3352";
+                #     soc_info->compatible = "ralink,rt3352-soc";
+                # } else if (n0 == 0x33355452 && n1 == 0x20203035) {
+                #     ralink_soc = RT305X_SOC_RT5350;
+                #     name = "RT5350";
+                #     soc_info->compatible = "ralink,rt5350-soc";
+                # } else {
+                #     panic("rt305x: unknown SoC, n0:%08x n1:%08x", n0, n1);
+                # }
+                - {offset: 0x0, size: 0x4, value: 0x30335452, path: arch/mips/ralink/rt7620.c, function: prom_soc_init}
+                - {offset: 0x4, size: 0x4, value: 0x20203235, path: arch/mips/ralink/rt7620.c ,function: prom_soc_init}
