--- a/slcore/database/bricktemplate/qemu.mmio.yaml
+++ b/slcore/database/bricktemplate/qemu.mmio.yaml
@@ -1020,18 +1020,18 @@ ralink,rt288x-pci:
   extend: mmio,generic
 ralink,rt3050-esw:
   buddy_compatible: []
-  get_body: ['object_initialize(&s->ralink_rt3050_esw{{ id }},
-      sizeof(s->ralink_rt3050_esw{{ id }}), TYPE_RALINK_RT3050_ESW);',
-      'qdev_set_parent_bus(DEVICE(&s->ralink_rt3050_esw{{ id }}), sysbus_get_default());',
-    'object_property_set_bool(OBJECT(&s->ralink_rt3050_esw{{ id }}), true, "realized", &err);',
-    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->ralink_rt3050_esw{{ id }}), 0, {{ reg.base|to_hex }});']
+  external: true
+  external_header: examples/hardware/ralink_rt3050_esw/include/hw/net/ralink_rt3050_esw.h
+  external_source: examples/hardware/ralink_rt3050_esw/hw/net/ralink_rt3050_esw.c
+  external_type: net
+  get_body: ['object_initialize(&s->ralink_rt3050_esw{{ id }}, sizeof(s->ralink_rt3050_esw{{
+      id }}), TYPE_RALINK_RT3050_ESW);', 'qdev_set_parent_bus(DEVICE(&s->ralink_rt3050_esw{{
+      id }}), sysbus_get_default());', 'object_property_set_bool(OBJECT(&s->ralink_rt3050_esw{{
+      id }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->ralink_rt3050_esw{{
+      id }}), 0, {{ reg.base|to_hex }});']
   get_connection: []
   get_field: ['RALINK_RT3050_ESWState ralink_rt3050_esw{{ id }};']
-  get_header: ['hw/net/ralink_rt3050_esw.h']
-  external_source: 'examples/hardware/ralink_rt3050_esw/hw/net/ralink_rt3050_esw.c'
-  external_header: 'examples/hardware/ralink_rt3050_esw/include/hw/net/ralink_rt3050_esw.h'
-  external: True
-  external_type: net
+  get_header: [hw/net/ralink_rt3050_esw.h]
 ralink,rt3050-eth:
   buddy_compatible: []
   extend: mmio,generic
@@ -1048,6 +1048,12 @@ ralink,rt3883-gdma:
   buddy_compatible: []
   extend: mmio,generic
 ralink,rt3883-pci:
+  buddy_compatible: []
+  extend: mmio,generic
+ralink,rt3xxx-ehci:
+  buddy_compatible: []
+  extend: mmio,generic
+ralink,rt3xxx-ohci:
   buddy_compatible: []
   extend: mmio,generic
 ralink,rt5350-eth:
