--- a/slcore/database/bricktemplate/qemu.timer.yaml
+++ b/slcore/database/bricktemplate/qemu.timer.yaml
@@ -92,17 +92,14 @@ plxtech,nas782x-rps-timer:
   parameters: []
 qcom,kpss-timer: {extend: 'timer,generic'}
 qcom,scss-timer: {extend: 'timer,generic'}
-ralink,cevt-systick: {extend: 'timer,generic'}
+ralink,cevt-systick:
+  extend: 'timer,generic'
+  external: true
+  get_connection: []
 ralink,rt2880-timer:
   external: true
-  get_body: ['object_initialize(&s->timer{{ id }}, sizeof(s->timer{{ id }}), TYPE_{{
-      name|to_upper }});', 'qdev_set_parent_bus(DEVICE(&s->timer{{ id }}), sysbus_get_default());',
-    'object_property_set_bool(OBJECT(&s->timer{{ id }}), true, "realized", &err);',
-    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->timer{{ id }}), 0, {{ reg.base|to_hex }});']
   get_connection: []
-  get_field: ['{{ name|to_upper }}State timer{{ id }};']
-  get_header: ['hw/timer/{{ name }}.h']
-  parameters: [intcp, irqns]
+  extend: 'timer,generic'
 rda,8810pl-timer: {extend: 'timer,generic'}
 renesas,16bit-timer: {extend: 'timer,generic'}
 renesas,8bit-timer: {extend: 'timer,generic'}
@@ -139,13 +136,13 @@ ti,da830-timer: {extend: 'timer,generic'}
 ti,keystone-timer: {extend: 'timer,generic'}
 ti,omap-counter32k: {extend: 'timer,generic'}
 timer,generic:
-  get_body: ['object_initialize(&s->timer{{ id }}, sizeof(s->timer{{ id }}), TYPE_{{
-      name|to_upper }});', 'qdev_set_parent_bus(DEVICE(&s->timer{{ id }}), sysbus_get_default());',
-    'object_property_set_bool(OBJECT(&s->timer{{ id }}), true, "realized", &err);',
-    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->timer{{ id }}), 0, {{ reg.base|to_hex }});']
-  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->timer{{ id }}), {{ siid }}, {{
+  get_body: ['object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_{{
+      name|to_upper }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
+    'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
+    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), {{ siid }}, {{
       intcp.get_irqn }});']
-  get_field: ['{{ name|to_upper }}State timer{{ id }};']
+  get_field: ['{{ name|to_upper }}State {{ name }}{{ id }};']
   get_header: ['hw/timer/{{ name }}.h']
   parameters: [intcp, irqns]
 via,vt8500-timer: {extend: 'timer,generic'}
