log mode from a to w; clear booting command; remove useless analysis in uploading

--- a/slcore/logging.yaml
+++ b/slcore/logging.yaml
@@ -13,7 +13,7 @@ handlers:
     level: DEBUG
     formatter: simple
     encoding: utf8
-    mode: a
+    mode: w
 root:
   level: INFO
   handlers: [console, file]
