remove trace in upload after trace analysis

--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -2,7 +2,8 @@ uploading:
     analyses: [FindMachine,
         Preparation, Tracing,
         LoadTrace,
-        CheckUserLevelF]
+        CheckUserLevelF,
+        DeleteTrace]
     description: ''
 tracecoverup:
     analyses: [
