--- a/examples/autoboard/hw/intc/Makefile.objs
+++ b/examples/autoboard/hw/intc/Makefile.objs
@@ -48,19 +48,4 @@ obj-$(CONFIG_ARM_GIC) += arm_gicv3_cpuif.o
 obj-$(CONFIG_MIPS_CPS) += mips_gic.o
 obj-$(CONFIG_NIOS2) += nios2_iic.o
 obj-$(CONFIG_OMPIC) += ompic.o
-obj-$(CONFIG_MACH_KIRKWOOD) += marvell_orion_intc.o
-obj-$(CONFIG_MACH_KIRKWOOD) += marvell_orion_bridge_intc.o
-obj-$(CONFIG_MACH_MVEBU) += marvell_mpic.o
-#obj-$(CONFIG_RALINK_RT3883_SOC) += ralink_rt2880_intc.o
-obj-$(CONFIG_RALINK_RT3883_SOC) += ralink_rt2880_intc.o autoboard_intc_gen.o autoboard_intc.o autoboard_level_irq.o autoboard_eoi_lvl_irq.o autoboard_edge_irq.o autoboard_intc_utils.o
-obj-$(CONFIG_QCA_AR7242) += qca_ar7240_misc_intc.o
-#obj-$(CONFIG_QCA_QCA9558) += qca_ar7240_misc_intc.o
-obj-$(CONFIG_QCA_QCA9558) += qca_ar7240_misc_intc.o autoboard_intc_gen.o autoboard_intc.o autoboard_level_irq.o autoboard_eoi_lvl_irq.o autoboard_edge_irq.o autoboard_intc_utils.o
-#obj-$(CONFIG_MARVELL_KIRKWOOD) += marvell_orion_intc.o
-#obj-$(CONFIG_MARVELL_KIRKWOOD) += marvell_orion_bridge_intc.o
-obj-$(CONFIG_MARVELL_KIRKWOOD) += marvell_orion_intc.o autoboard_intc_gen.o autoboard_intc.o autoboard_level_irq.o autoboard_eoi_lvl_irq.o autoboard_edge_irq.o autoboard_intc_utils.o
-obj-$(CONFIG_MARVELL_ARMADA_370_XP) += marvell_mpic.o
-obj-$(CONFIG_RALINK_RT3050_SOC) += ralink_rt2880_intc.o
-#obj-$(CONFIG_AUTOBOARD_INTC) += autoboard_intc_gen.o autoboard_intc.o autoboard_level_irq.o autoboard_eoi_lvl_irq.o autoboard_edge_irq.o autoboard_intc_utils.o
-#obj-$(CONFIG_RALINK_RT3050_SOC) += ralink_rt2880_intc.o autoboard_intc_gen.o autoboard_intc.o autoboard_level_irq.o autoboard_eoi_lvl_irq.o autoboard_edge_irq.o autoboard_intc_utils.o
-obj-$(CONFIG_WRT350N_V2) += sintc.o
+obj-$(CONFIG_AUTOBOARD) += autoboard_intc_gen.o autoboard_intc.o autoboard_level_irq.o autoboard_eoi_lvl_irq.o autoboard_edge_irq.o autoboard_intc_utils.o
