--- a/examples/autoboard/hw/timer/Makefile.objs
+++ b/examples/autoboard/hw/timer/Makefile.objs
@@ -47,10 +47,4 @@ common-obj-$(CONFIG_SUN4V_RTC) += sun4v-rtc.o
 common-obj-$(CONFIG_CMSDK_APB_TIMER) += cmsdk-apb-timer.o
 common-obj-$(CONFIG_CMSDK_APB_DUALTIMER) += cmsdk-apb-dualtimer.o
 common-obj-$(CONFIG_MSF2) += mss-timer.o
-obj-$(CONFIG_MACH_KIRKWOOD) += marvell_orion_timer.o
-obj-$(CONFIG_MACH_MVEBU) += marvell_armada_xp_timer.o
-obj-$(CONFIG_RALINK_RT3883_SOC) += ralink_rt2880_timer.o autoboard_timer_gen.o autoboard_clkevt.o autoboard_clksrc.o autoboard_timer.o autoboard_timer_utils.o
-obj-$(CONFIG_MARVELL_KIRKWOOD) += marvell_orion_timer.o autoboard_timer_gen.o autoboard_clkevt.o autoboard_clksrc.o autoboard_timer.o autoboard_timer_utils.o
-obj-$(CONFIG_MARVELL_ARMADA_370_XP) += marvell_armada_xp_timer.o
-obj-$(CONFIG_RALINK_RT3050_SOC) += ralink_rt2880_timer.o
-obj-$(CONFIG_PLXTECH_NAS782X) += plxtech_nas782x_rps_timer.o autoboard_timer_gen.o autoboard_clkevt.o autoboard_clksrc.o autoboard_timer.o autoboard_timer_utils.o
+obj-$(CONFIG_AUTOBOARD) += autoboard_timer_gen.o autoboard_clkevt.o autoboard_clksrc.o autoboard_timer.o autoboard_timer_utils.o
