--- a/slcore/database/bricktemplate/qemu.intc.yaml
+++ b/slcore/database/bricktemplate/qemu.intc.yaml
@@ -21,6 +21,20 @@ arm,arm11mp-gic:
   parameters: [name, regs, intcp]
   unique: true
   builtin: 3
+arm,arm11mp-gic,autoboard:
+  buddy_compatible: ['arm,arm11mp-twd-timer', mpcore_wdt]
+  get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_AUTOBOARDARM11MPCORE_PRIV);',
+    'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+      name }}), 0, {{ reg.base|to_hex }} & 0xffff0000);']
+  get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn
+      }});']
+  get_field: ['AUTOBOARDARM11MPCorePriveState {{ name }};']
+  get_header: [hw/cpu/autoboard_arm11mpcore.h]
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ name }}), {{ irqn }})
+  n_irq: 64
+  parameters: [name, regs, intcp]
+  unique: true
+  builtin: 3
 arm,armv7m-nvic: {extend: 'intc,generic'}
 arm,cortex-a15-gic: {extend: 'intc,generic'}
 arm,cortex-a7-gic: {extend: 'intc,generic'}
