--- a/slcore/database/bricktemplate/qemu.intc.yaml
+++ b/slcore/database/bricktemplate/qemu.intc.yaml
@@ -41,15 +41,16 @@ arm,cortex-a7-gic: {extend: 'intc,generic'}
 arm,cortex-a9-gic:
   buddy_compatible: ['arm,cortex-a9-scu', 'arm,cortex-a9-global-timer', 'arm,cortex-a9-twd-timer']
   get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_A9MPCORE_PRIV);',
-    'qdev_prop_set_uint32(DEVICE(&s->arm_cortex_a9_gic), "num-cpu", 2);', 'object_property_set_bool(OBJECT(&s->{{
+    'qdev_prop_set_uint32(DEVICE(&s->arm_cortex_a9_gic), "num-cpu", 2);',
+    'qdev_prop_set_uint32(DEVICE(&s->arm_cortex_a9_gic), "num-irq", 128);', 'object_property_set_bool(OBJECT(&s->{{
       name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
       name }}), 0, {{ reg.base|to_hex }} & 0xffff0000);']
   get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn
       }});']
   get_field: ['A9MPPrivState {{ name }};']
   get_header: [hw/cpu/a9mpcore.h]
-  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }} - 32)
-  n_irq: 96
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}), {{ irqn }})
+  n_irq: 128
   parameters: [name, regs, intcp]
   unique: true
   builtin: 4
