--- a/slcore/database/bricktemplate/qemu.intc.yaml
+++ b/slcore/database/bricktemplate/qemu.intc.yaml
@@ -121,7 +121,19 @@ jcore,aic2: {extend: 'intc,generic'}
 lsi,zevio-intc: {extend: 'intc,generic'}
 marvell,mpic: {extend: 'intc,generic', external: true}
 marvell,odmi-controller: {extend: 'intc,generic'}
-marvell,orion-bridge-intc: {extend: 'intc,generic', external: true}
+marvell,orion-bridge-intc:
+  get_body: ['set_autoboard_intc_cfg(AUTOBOARD_INTC_KIRKWOOD_GENERIC_BRIDGE, "intc");',
+    'object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_AUTOBOARD_INTC);',
+    'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
+    'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
+    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), 0, {{ intcp.get_irqn
+      }});']
+  get_field: ['AUTOBOARD_INTCState {{ name }}{{ id }};']
+  get_header: ['hw/intc/autoboard_intc.h']
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}{{ iid }}), {{ irqn }})
+  n_irq: 32
+  parameters: [name, regs, intcp]
 marvell,orion-intc: {extend: 'intc,generic', external: true}
 marvell,pxa-intc: {extend: 'intc,generic'}
 mediatek,mt6577-sysirq: {extend: 'intc,generic'}
@@ -155,6 +167,19 @@ plxtech,nas782x-rps: {extend: 'intc,generic'}
 qca,ar7100-cpu-intc: {extend: 'mti,cpu-interrupt-controller'}
 qca,ar7100-misc-intc: {extend: 'intc,generic'}
 qca,ar7240-misc-intc: {extend: 'intc,generic', external: true}
+qca,ar7240-misc-intc,autoboard:
+  get_body: ['set_autoboard_intc_cfg(AUTOBOARD_INTC_ATH79_GENERIC, "intc");',
+    'object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_AUTOBOARD_INTC);',
+    'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
+    'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
+    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), 0, {{ intcp.get_irqn
+      }});']
+  get_field: ['AUTOBOARD_INTCState {{ name }}{{ id }};']
+  get_header: ['hw/intc/autoboard_intc.h']
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}{{ iid }}), {{ irqn }})
+  n_irq: 32
+  parameters: [name, regs, intcp]
 qca,ar9340-intc: {extend: 'intc,generic'}
 qcom,apq8084-pinctrl:
   buddy_compatible: []
@@ -171,6 +196,30 @@ ralink,mt7621-gic:
   buddy_compatible: []
   extend: intc,generic
 ralink,rt2880-intc: {extend: 'intc,generic', external: true}
+ralink,rt2880-intc,autoboard:
+  get_body: ['set_autoboard_intc_cfg(AUTOBOARD_INTC_RAMIPS_RT3883, "intc");',
+    'object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_AUTOBOARD_INTC);',
+    'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
+    'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
+    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), 0, {{ intcp.get_irqn
+      }});']
+  get_field: ['AUTOBOARD_INTCState {{ name }}{{ id }};']
+  get_header: ['hw/intc/autoboard_intc.h']
+  get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}{{ iid }}), {{ irqn }})
+  n_irq: 32
+  parameters: [name, regs, intcp]
+qca,ar9340-intc: {extend: 'intc,generic'}
+qcom,apq8084-pinctrl:
+  buddy_compatible: []
+  extend: intc,generic
+qcom,msm-8660-qgic: {extend: 'intc,generic'}
+qcom,msm-qgic2: {extend: 'intc,generic'}
+qcom,smp2p:
+  buddy_compatible: []
+  extend: intc,generic
+qcom,smsm:
+  buddy_compatible: []
 renesas,h8300h-intc: {extend: 'intc,generic'}
 renesas,h8s-intc: {extend: 'intc,generic'}
 samsung,exynos4210-combiner: {extend: 'intc,generic'}
