update example code

--- a/slcore/database/support.arm.yaml
+++ b/slcore/database/support.arm.yaml
@@ -1,188 +1,318 @@
-mach-actions: {device_tree: true}
-mach-alpine: {device_tree: true}
-mach-artpec: {device_tree: true}
+mach-actions:
+  device_tree: true
+mach-alpine:
+  device_tree: true
+mach-artpec:
+  device_tree: true
 mach-at91:
   device_tree: true
   targets:
-    openwrt: [at91]
-mach-axxia: {device_tree: true}
+    openwrt:
+    - at91
+mach-axxia:
+  device_tree: true
 mach-bcm:
   device_tree: true
   support_list:
-    asus,rt-ac56u: {arch: arm, brand: openwrt, endian: l, example: examples/machines/brcm_bcm4708,
-      loaddr: '0x00008000', realdtb: slcore/database/archivedtb/brcm_bcm4708.dtb,
-      subtarget: generic, target: bcm53xx}
-    brcm,bcm4708: {arch: arm, brand: openwrt, endian: l, example: examples/machines/brcm_bcm4708,
-      loaddr: '0x00008000', realdtb: slcore/database/archivedtb/brcm_bcm4708.dtb,
-      subtarget: generic, target: bcm53xx}
+    asus,rt-ac56u:
+      arch: arm
+      brand: openwrt
+      endian: l
+      example: examples/machines/brcm_bcm4708
+      loaddr: '0x00008000'
+      realdtb: slcore/database/archivedtb/brcm_bcm4708.dtb
+      subtarget: generic
+      target: bcm53xx
+    brcm,bcm4708:
+      arch: arm
+      brand: openwrt
+      endian: l
+      example: examples/machines/brcm_bcm4708
+      loaddr: '0x00008000'
+      realdtb: slcore/database/archivedtb/brcm_bcm4708.dtb
+      subtarget: generic
+      target: bcm53xx
   targets:
-    openwrt: [bcm53xx]
+    openwrt:
+    - bcm53xx
 mach-bcm2708:
   device_tree: null
   machine_ids: {}
   targets:
-    openwrt: [brcm2708]
-mach-berlin: {device_tree: true}
-mach-clps711x: {device_tree: true}
+    openwrt:
+    - brcm2708
+mach-berlin:
+  device_tree: true
+mach-clps711x:
+  device_tree: true
 mach-cns21xx:
   device_tree: null
   machine_ids: {}
   targets:
-    openwrt: [cns21xx]
+    openwrt:
+    - cns21xx
 mach-cns3xxx:
   device_tree: true
   targets:
-    openwrt: [cns3xxx]
-mach-davinci: {device_tree: true}
-mach-digicolor: {device_tree: true}
-mach-dove: {device_tree: false}
-mach-ebsa110: {device_tree: false}
-mach-efm32: {device_tree: true}
+    openwrt:
+    - cns3xxx
+mach-davinci:
+  device_tree: true
+mach-digicolor:
+  device_tree: true
+mach-dove:
+  device_tree: false
+mach-ebsa110:
+  device_tree: false
+mach-efm32:
+  device_tree: true
 mach-ep93xx:
   device_true: false
   targets:
-    openwrt: [ep93xx]
-mach-exynos: {device_true: true}
-mach-footbridge: {device_tree: false}
+    openwrt:
+    - ep93xx
+mach-exynos:
+  device_true: true
+mach-footbridge:
+  device_tree: false
 mach-gemini:
   device_tree: null
   machine_ids: {}
   targets:
-    openwrt: [gemini]
-mach-genimi: {device_tree: true}
+    openwrt:
+    - gemini
+mach-genimi:
+  device_tree: true
 mach-goldfish:
   device_tree: null
   machine_ids: {}
   targets:
-    openwrt: [goldfish]
-mach-highbank: {device_tree: true}
-mach-hisi: {device_tree: true}
+    openwrt:
+    - goldfish
+mach-highbank:
+  device_tree: true
+mach-hisi:
+  device_tree: true
 mach-imx:
   device_tree: true
   targets:
-    openwrt: [imx21, imx6, layerscape]
-mach-integrator: {device_tree: true}
-mach-iop13xx: {device_tree: false}
+    openwrt:
+    - imx21
+    - imx6
+    - layerscape
+mach-integrator:
+  device_tree: true
+mach-iop13xx:
+  device_tree: false
 mach-iop32x:
   device_tree: false
   targets:
-    openwrt: [iop32x]
-mach-iop33x: {device_tree: false}
+    openwrt:
+    - iop32x
+mach-iop33x:
+  device_tree: false
 mach-ixp4xx:
   device_tree: true
   targets:
-    openwrt: [ixp4xx]
-mach-keystone: {device_tree: true}
-mach-ks8695: {device_tree: false}
-mach-lpc32xx: {device_tree: true}
+    openwrt:
+    - ixp4xx
+mach-keystone:
+  device_tree: true
+mach-ks8695:
+  device_tree: false
+mach-lpc32xx:
+  device_tree: true
 mach-mcs814x:
   device_tree: null
   machine_ids: {}
   targets:
-    openwrt: [mcs814x]
+    openwrt:
+    - mcs814x
 mach-mediatek:
   device_tree: true
   targets:
-    openwrt: [mediatek]
-mach-meson: {device_tree: true}
-mach-milbeaut: {device_tree: true}
-mach-mmp: {device_tree: true}
-mach-moxart: {device_tree: false}
-mach-msm: {device_tree: false}
-mach-mv78xx0: {device_tree: false}
+    openwrt:
+    - mediatek
+mach-meson:
+  device_tree: true
+mach-milbeaut:
+  device_tree: true
+mach-mmp:
+  device_tree: true
+mach-moxart:
+  device_tree: false
+mach-msm:
+  device_tree: false
+mach-mv78xx0:
+  device_tree: false
 mach-mvebu:
   device_tree: true
   support_list:
-    linksys,viper: {arch: arm, brand: openwrt, endian: l, example: examples/machines/marvell_kirkwood,
-      loaddr: '0x00008000', realdtb: slcore/database/archivedtb/marvell_kirkwood.dtb,
-      subtarget: generic, target: kirkwood}
-    marvell,kirkwood: {arch: arm, brand: openwrt, endian: l, example: examples/machines/marvell_kirkwood,
-      loaddr: '0x00008000', realdtb: slcore/database/archivedtb/marvell_kirkwood.dtb,
-      subtarget: generic, target: kirkwood}
-    marvell,kirkwood-88f6282: {arch: arm, brand: openwrt, endian: l, example: examples/machines/marvell_kirkwood,
-      loaddr: '0x00008000', realdtb: slcore/database/archivedtb/marvell_kirkwood.dtb,
-      subtarget: generic, target: kirkwood}
+    linksys,viper:
+      arch: arm
+      brand: openwrt
+      endian: l
+      example: examples/machines/marvell_kirkwood
+      loaddr: '0x00008000'
+      realdtb: slcore/database/archivedtb/marvell_kirkwood.dtb
+      subtarget: generic
+      target: kirkwood
+    marvell,kirkwood:
+      arch: arm
+      brand: openwrt
+      endian: l
+      example: examples/machines/marvell_kirkwood
+      loaddr: '0x00008000'
+      realdtb: slcore/database/archivedtb/marvell_kirkwood.dtb
+      subtarget: generic
+      target: kirkwood
+    marvell,kirkwood-88f6282:
+      arch: arm
+      brand: openwrt
+      endian: l
+      example: examples/machines/marvell_kirkwood
+      loaddr: '0x00008000'
+      realdtb: slcore/database/archivedtb/marvell_kirkwood.dtb
+      subtarget: generic
+      target: kirkwood
   targets:
-    openwrt: [mvebu, kirkwood]
+    openwrt:
+    - mvebu
+    - kirkwood
 mach-mxs:
   device_tree: true
   targets:
-    openwrt: [mxs]
-mach-netx: {device_tree: false}
-mach-nomadik: {device_tree: true}
-mach-npcm: {device_tree: true}
-mach-nspire: {device_tree: false}
-mach-omap1: {device_tree: false}
+    openwrt:
+    - mxs
+mach-netx:
+  device_tree: false
+mach-nomadik:
+  device_tree: true
+mach-npcm:
+  device_tree: true
+mach-nspire:
+  device_tree: false
+mach-omap1:
+  device_tree: false
 mach-omap2:
   device_tree: true
   targets:
-    openwrt: [omap, omap24xx, omap35xx, omap4]
+    openwrt:
+    - omap
+    - omap24xx
+    - omap35xx
+    - omap4
 mach-orion5x:
   device_tree: true
-  machine_ids: {'0x661': examples/arm/mach-orion5x/profile.yaml, '0x709': examples/arm/mach-orion5x/profile.yaml}
+  machine_ids:
+    '0x661': examples/arm/mach-orion5x/profile.yaml
+    '0x709': examples/arm/mach-orion5x/profile.yaml
   targets:
-    openwrt: [orion]
+    openwrt:
+    - orion
 mach-oxnas:
   device_tree: true
   support_list:
-    plxtech,nas7820: {arch: arm, brand: openwrt, endian: l, example: examples/machines/plxtech_nas782x,
-      loaddr: '0x00008000', realdtb: slcore/database/archivedtb/plxtech_nas782x.dtb,
-      subtarget: generic, target: oxnas}
-    plxtech,nas782x: {arch: arm, brand: openwrt, endian: l, example: examples/machines/plxtech_nas782x,
-      loaddr: '0x00008000', realdtb: slcore/database/archivedtb/plxtech_nas782x.dtb,
-      subtarget: generic, target: oxnas}
+    plxtech,nas7820:
+      arch: arm
+      brand: openwrt
+      endian: l
+      example: examples/machines/plxtech_nas782x
+      loaddr: '0x00008000'
+      realdtb: slcore/database/archivedtb/plxtech_nas782x.dtb
+      subtarget: generic
+      target: oxnas
+    plxtech,nas782x:
+      arch: arm
+      brand: openwrt
+      endian: l
+      example: examples/machines/plxtech_nas782x
+      loaddr: '0x00008000'
+      realdtb: slcore/database/archivedtb/plxtech_nas782x.dtb
+      subtarget: generic
+      target: oxnas
   targets:
-    openwrt: [oxnas]
-mach-picoxcell: {device_tree: true}
-mach-prima2: {device_tree: true}
+    openwrt:
+    - oxnas
+mach-picoxcell:
+  device_tree: true
+mach-prima2:
+  device_tree: true
 mach-pxa:
   device_tree: true
   targets:
-    openwrt: [pxa]
+    openwrt:
+    - pxa
 mach-qcom:
   device_true: true
   targets:
-    openwrt: [ipq40xx, ipq806x]
+    openwrt:
+    - ipq40xx
+    - ipq806x
 mach-realview:
   device_tree: true
   targets:
-    openwrt: [realview]
-mach-rockchip: {device_tree: true}
-mach-rpc: {device_tree: false}
+    openwrt:
+    - realview
+mach-rockchip:
+  device_tree: true
+mach-rpc:
+  device_tree: false
 mach-s3c2410:
   device_tree: null
   machine_ids: {}
   targets:
-    openwrt: [s3c24xx]
-mach-s3c24xx: {device_tree: true}
-mach-s3c64xx: {device_tree: true}
+    openwrt:
+    - s3c24xx
+mach-s3c24xx:
+  device_tree: true
+mach-s3c64xx:
+  device_tree: true
 mach-s5pv210:
   device_true: true
   targets:
-    openwrt: [samsung]
-mach-sa1100: {device_tree: false}
-mach-shmobile: {device_true: true}
-mach-socfpga: {device_tree: true}
-mach-spear: {device_tree: true}
-mach-sti: {device_true: true}
-mach-stm32: {device_treu: true}
+    openwrt:
+    - samsung
+mach-sa1100:
+  device_tree: false
+mach-shmobile:
+  device_true: true
+mach-socfpga:
+  device_tree: true
+mach-spear:
+  device_tree: true
+mach-sti:
+  device_true: true
+mach-stm32:
+  device_treu: true
 mach-sunxi:
   device_tree: true
   targets:
-    openwrt: [sunxi]
-mach-tango: {device_tree: true}
+    openwrt:
+    - sunxi
+mach-tango:
+  device_tree: true
 mach-tegra:
   device_true: true
   targets:
-    openwrt: [tegra]
-mach-u300: {device_tree: true}
-mach-ux500: {device_tree: true}
-mach-versatile: {device_tree: true}
-mach-vexpress: {device_tree: true}
-mach-vt8500: {device_true: true}
-mach-w90x900: {device_tree: false}
-mach-zx: {device_tree: true}
+    openwrt:
+    - tegra
+mach-u300:
+  device_tree: true
+mach-ux500:
+  device_tree: true
+mach-versatile:
+  device_tree: true
+mach-vexpress:
+  device_tree: true
+mach-vt8500:
+  device_true: true
+mach-w90x900:
+  device_tree: false
+mach-zx:
+  device_tree: true
 mach-zynq:
   device_true: true
   targets:
-    openwrt: [zynq]
+    openwrt:
+    - zynq
