--- a/slcore/cmdconfigs/plugins/source.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/source.cmd.yaml
@@ -14,7 +14,10 @@ quicksrc:
         entry_point: {short: e, required: False,
             help: "Find the file contains the entry point of data or function and preprocess the file."}
         file: {short: f, required: False, help: "Preprocess the file."}
-        cgcfg: {short: cgcfg,  cgcfg, required: False, action: "store_true", default: False,
-            help: "Do cg/cfg analysis from the ep and show the interesting places."}
-        caller: {short: caller, required: False, help: "Give the caller of the entry point."}
     callback: quicksrca
+ktraversal:
+    help: "Plugin - Traverse the Linux kernel source code."
+    optional:
+        << : *optional
+        dirs: {short: dirs, required: False, help: "Dirs to be included."}
+    callback: traversekernel
