--- a/slcore/database/bricktemplate/qemu.timer.yaml
+++ b/slcore/database/bricktemplate/qemu.timer.yaml
@@ -76,7 +76,8 @@ marvell,orion-timer,autoboard:
     'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
     'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
     'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
-  get_connection: []
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), {{ siid }}, {{
+      intcp.get_irqn }});']
   get_field: ['AUTOBOARD_TIMERState {{ name }}{{ id }};']
   get_header: ['hw/timer/autoboard_timer.h']
   parameters: [name, regs]
@@ -120,6 +121,13 @@ ralink,rt2880-timer:
   external: true
   get_connection: []
   extend: 'timer,generic'
+ralink,rt2880-timer,autoboard:
+  external: true
+  get_connection: []
+  extend: 'timer,generic'
+qcom,kpss-timer: {extend: 'timer,generic'}
+qcom,scss-timer: {extend: 'timer,generic'}
+ralink,cevt-systick:
 rda,8810pl-timer: {extend: 'timer,generic'}
 renesas,16bit-timer: {extend: 'timer,generic'}
 renesas,8bit-timer: {extend: 'timer,generic'}
