--- a/slcore/cmdconfigs/plugins/debug.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/debug.cmd.yaml
@@ -1,4 +1,4 @@
-qdebug:
+debugsrc:
     help: "Plugin - Add and delete QEMU source for debugging."
     optional:
         clean: {short: c, action: 'store_true', default: False,
