--- a/slcore/cmdconfigs/plugins/device_tree.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/device_tree.cmd.yaml
@@ -1,7 +1,7 @@
 itopology:
-    help: "Plugin - Find the interrupt topology in given device tree."
+    help: "Plugin - Disclose interrupt topology."
     optional: &optional
-        dtb: {short: dtb, required: False, help: 'Path to a device tree blob.'}
+        dtb: {short: dtb, required: True, help: 'Path to a device tree blob.'}
     callback: topologydt
 dtcoverup:
     help: "Plugin - Disclose device tree blob."
@@ -13,7 +13,6 @@ dtcoverup:
             help: "Show FLASH chips in the device tree blob."}
     callback: disclosedt
 newhwdt:
-    help: "Plugin - update hardware template in given device tree blob."
+    help: "Plugin - Add unknown hardware."
     optional: *optional
     callback: updatehardwaredt
-
