update usntest to device tree plugins

--- a/slcore/cmdconfigs/plugins/device_tree.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/device_tree.cmd.yaml
@@ -16,3 +16,7 @@ newhwdt:
     help: "Plugin - Add unknown hardware."
     optional: *optional
     callback: updatehardwaredt
+usntest:
+    help: "Plugin - Test serials and SMP."
+    optional: *optional
+    callback: testusn
