--- a/slcore/aconfigs/plugins/image.a.yaml
+++ b/slcore/aconfigs/plugins/image.a.yaml
@@ -1,3 +1,3 @@
 bootingcmd:
-    analyses: [DTPreprocessing, Preparation, PBtngCMD]
+    analyses: [Unpack, DTPreprocessing, Preparation, PBtngCMD]
     description: ''
