--- a/slcore/cmdconfigs/plugins/source.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/source.cmd.yaml
@@ -1,7 +1,10 @@
 newprfsrc:
     help: "Plugin - Find new peripherals in the OS source."
     optional: &optional
-        source: {short: s, required: False, help: "Path to the OS source."}
+        source: &source
+            short: s
+            required: False
+            help: "Path to the OS source."
     callback: updatecompatibledb
 newhwsrc:
     help: "Plugin - Find new hardware in the OS source."
@@ -26,3 +29,18 @@ traversrc:
         file: {short: f, nargs: '+', required: False, help: "File to be traversed."}
         all: {short: a, action: 'store_true', default: False, help: "Show skipped functions."}
     callback: traversekernel
+loaddr:
+    help: "Plugin - Find load address."
+    optional: *optional
+    callback: calcloadaddr
+ofinitcbs:
+    help: "Plugin - Find of_init callbacks in OS source."
+    optional:
+        source:
+            << : *source
+            required: Ture
+        dtb: &dtb
+            short: dtb
+            required: True
+            help: "Path to device tree."
+    callback: ofinitsrc
